[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/global_font_45.tres" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/global_font_80.tres" type="DynamicFontData" id=2]
[ext_resource path="res://src/scenes/intro_screen.gd" type="Script" id=3]

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[node name="IntroScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 2000.0
margin_bottom = 1104.0
color = Color( 0, 0, 0, 1 )

[node name="Screen" type="Node2D" parent="."]

[node name="Text" type="Label" parent="Screen"]
margin_left = 464.0
margin_top = 192.0
margin_right = 1552.0
margin_bottom = 848.0
custom_fonts/font = SubResource( 1 )
text = "\"O ser humano deve
desenvolver, para todos os 
seus conflitos, um método 
que rejeite a vingança,
 a agressão e a retaliação.
 A base para este tipo de método 
é o amor.\""
align = 1
valign = 1

[node name="AuthorSign" type="Label" parent="Screen"]
self_modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 1120.0
margin_top = 816.0
margin_right = 1426.0
margin_bottom = 853.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Martin Luther King"

[node name="TweenText" type="Tween" parent="."]

[node name="TweenSign" type="Tween" parent="."]

[node name="TweenOut" type="Tween" parent="."]

[connection signal="tween_completed" from="TweenText" to="." method="_on_TweenText_tween_completed"]
[connection signal="tween_completed" from="TweenSign" to="." method="_on_TweenSign_tween_completed"]
[connection signal="tween_completed" from="TweenOut" to="." method="_on_TweenOut_tween_completed"]
